--- a/website/app/index.html
+++ b/website/app/index.html
@@ -1,9 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AWS AI Stack</title>
+    <link
+      rel="icon"
+      href="https://s3.us-east-2.amazonaws.com/assets.public.serverless/general/serverless-framework-red-bolt-icon.png"
+      type="image/png"
+    />
   </head>
   <body>
     <div id="root"></div>
